--- a/src/components/worker/form/form.module.scss
+++ b/src/components/worker/form/form.module.scss
@@ -9,6 +9,23 @@
   }
 
   40% {
+    transform: scale(0.8);
+  }
+
+  60% {
+    transform: scale(0.9);
+  }
+}
+@keyframes bounceSubmit {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: scale(1);
+  }
+
+  40% {
     transform: scale(0.9);
   }
 
@@ -42,9 +59,13 @@
       align-items: center;
       justify-content: center;
       transition: all 0.2s ease;
-      &:active {
+      // &:active {
+      //   animation: bounce 0.4s ease;
+      // }
+      &:focus {
         animation: bounce 0.4s ease;
       }
+
       svg {
         height: 4rem;
         width: 4rem;
@@ -62,12 +83,14 @@
     width: 100%;
     height: 100%;
     padding: 1rem;
+    gap: 0.7rem;
     .input_text {
+      display: flex;
+      flex-direction: column;
       position: relative;
       width: 100%;
-      // overflow: hidden;
+      gap: 0.3rem;
       &:first-child {
-        padding-bottom: 0.5rem;
         border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
         height: 12rem;
       }
@@ -79,16 +102,15 @@
         box-shadow: none;
         resize: none;
         color: inherit;
+        font-size: $s;
+        &::placeholder {
+          font-weight: 500;
+        }
       }
-      input {
-        padding: 0.7rem 0;
-      }
-      textarea::placeholder {
-        font-size: $m;
-        font-weight: 500;
-      }
+
       .input_error {
-        opacity: 0.6;
+        color: red;
+        font-weight: 300;
       }
     }
   }
@@ -96,9 +118,11 @@
     margin-top: 1em;
     width: 100%;
     color: inherit;
-
     font-size: $m;
     font-weight: 600;
+    &:focus {
+      animation: bounceSubmit 0.3s ease;
+    }
   }
 }
 //чекбокс
