--- a/src/pages/authorization/authorization.module.scss
+++ b/src/pages/authorization/authorization.module.scss
@@ -7,19 +7,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  background-color: $adm-background-burger;
   .wrapper {
     width: 50rem;
     .column_form {
       position: relative;
       padding: 3rem 2rem;
-      border: 1px solid $black;
-      background-color: $white;
-      border-radius: 1rem;
       display: flex;
       flex-direction: column;
       gap: 3rem;
-      box-shadow: $shadow-midle;
+      @include style-conteiner;
       .enter_title {
         text-align: center;
         font-size: 3rem;
