--- a/src/pages/error/error.module.scss
+++ b/src/pages/error/error.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  color: $adm-white;
   .title {
     align-self: center;
     font-size: 10rem;
