--- a/src/pages/gratitude/gratitude.module.scss
+++ b/src/pages/gratitude/gratitude.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
+  text-align: center;
   .logo {
     margin-bottom: 2rem;
     img {
